# prob_rob_labs

./: .gitignore
labs/: CMakeLists.txt  setup.py
labs/launch/: correspondence_matcher.launch  door_control_node.launch  eif_odometry_node.launch  ekf_error_node.launch  ekf_localization.launch  ekf_odometry_node.launch  find_thres_noise.launch  ground_truth_extraction.launch  jackal_and_door.launch  measure_predictor.launch  odometry_error_node.launch
labs/misc/: control_my_bot.py
labs/src/correspondence_matcher/: correspondence_matcher.py  feature_matching_errors_cyan.csv
labs/src/door_control_node/: door_control_node.py
labs/src/eif_odometry_node/: eif_odometry_node.py
labs/src/ekf_error_node/: ekf_error_node.py
labs/src/ekf_landmark_loc/: ekf_landmark_loc.py
labs/src/ekf_localization/: ekf_localization.py
labs/src/ekf_odometry_node/: ekf_odometry_node.py
labs/src/find_thres_noise/: find_thres_noise.py  find_thres_noise.py.save
labs/src/ground_truth_extraction/: ground_truth_extraction.py
labs/src/measure_predictor/: measure_predictor.py  measurement_model.py
labs/src/measurement_model/: m_model.py  measurement_model.py
labs/src/odometry_error_node/: odometry_error_node.py
